054 Cover: tablet photo specially cropped, fixes to icons and positioning

--- a/src/_css-variables.scss
+++ b/src/_css-variables.scss
@@ -13,7 +13,8 @@ $COVER_HEIHT_1240: calc(min(100vh, 625px));
 $COVER_HEIHT_896: calc(min(100vh, 414px));
 // $COVER_HEIHT_1240: 100vh;
 $COVER_MENU_HEIGHT_1240: 96.77px;
-$COVER_PHOTO_AREA_HEIGHT: calc(#{$COVER_HEIHT_1240} - #{$COVER_MENU_HEIGHT_1240});
+$COVER_PHOTO_AREA_HEIGHT_1240: calc(#{$COVER_HEIHT_1240} - #{$COVER_MENU_HEIGHT_1240});
+$COVER_PHOTO_AREA_HEIGHT_896: $COVER_HEIHT_896;
 // COLOUR
 $DARK_BLUE: #176087;
 $PALE_BLUE: #97C8EB;
