--- a/src/components/Cover/Cover.scss
+++ b/src/components/Cover/Cover.scss
@@ -1,4 +1,4 @@
-@import '../../css-variables.scss';
+@import "../../css-variables.scss";
 
 .cover {
   height: $COVER_HEIHT_1240;
@@ -7,13 +7,18 @@
   justify-content: space-between;
 }
 
+.cover__photo-part {
+  display: flex;
+}
+
 .cover__picture {
   overflow: hidden;
+  height: $COVER_PHOTO_AREA_HEIGHT_1240;
 }
 
 .cover__image {
   width: 114%;
-  height: $COVER_PHOTO_AREA_HEIGHT;
+  height: $COVER_PHOTO_AREA_HEIGHT_1240;
   object-fit: cover;
   object-position: 0 35%;
 }
@@ -32,9 +37,20 @@
   }
 }
 
+// 701px - 896px
 @media (min-width: $PW_DESKTOP_HEADER_MIN) and (max-width: $PW_TABLET_MAX) {
   .cover {
     height: $COVER_HEIHT_896;
     flex-direction: row-reverse;
+  }
+
+  .cover__picture {
+    height: $COVER_PHOTO_AREA_HEIGHT_896;
+  }
+
+  .cover__image {
+    width: 100%;
+    height: 100%;
+    object-position: 100% 100%;
   }
 }
