--- a/src/components/UIControls/CoverAndMobMenu/CoverAndMobMenu.scss
+++ b/src/components/UIControls/CoverAndMobMenu/CoverAndMobMenu.scss
@@ -1,6 +1,9 @@
 @import "../../../css-variables.scss";
 // @import "../UIControlsGlobals";
 
+$ICON_SIZE_1240: calc(min(4.84vw, 60px));
+$ICON_SIZE_1240_ENLARGED: calc(min(5.65vw, 70px));
+
 .cover-and-mob-menu {
   // nav
   box-sizing: border-box;
@@ -74,16 +77,16 @@
 
 /* Важен порядок НАЧАЛО */
 .cover-and-mob-menu__icon {
-  width: 4.84vw;
-  height: 4.84vw;
-  margin: auto .89vw auto 0;
+  width: $ICON_SIZE_1240;
+  height: $ICON_SIZE_1240;
+  margin: auto 0.89vw auto 0;
   object-fit: contain;
   fill: $PALE_BLUE;
   // transition: fill 0.15s ease-in;
 
   &_larger {
-    width: 5.65vw;
-    height: 5.65vw;
+    width: $ICON_SIZE_1240_ENLARGED;
+    height: $ICON_SIZE_1240_ENLARGED;
   }
 
   .cover-and-mob-menu__link:hover & {
@@ -158,7 +161,8 @@
   }
 
   .cover-and-mob-menu__item {
-    border: none;
+    // border-right: none;
+    border-bottom: 1px solid #30749a;
 
     &_order_first {
       order: -1;
